testsuite/tests/unparsing/invalid_lkt_config/test.out
== test.lkt ==
default_cfg.lkt:3:21: error: unexpected template
3 |    val sep = [line, rrecurse]
  |                     ^^^^^^^^


lkt_compile: Done
